Correccion de errores sonar